// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with-review-form hoc renders correctly withReviewForm with all props renders correctly 1`] = `
<MockComponent
  id={0}
  onChange={[Function]}
  onSubmit={[Function]}
  rating={3}
  review="test"
/>
`;

exports[`with-review-form hoc renders correctly withReviewForm without additional props renders correctly 1`] = `
<MockComponent
  id={0}
  onChange={[Function]}
  onSubmit={[Function]}
  rating=""
  review=""
/>
`;
